tenzir/integration/data/reference/pipelines_local/test_parse_operators/step_13.ref
error: the file `/foo.json` does not exist
 --> <input>:1:13
  |
1 | from file:///foo.json read json
  |             ^^^^^^^^^ 
  |
error: pipeline-executor aborts start because an execution node failed to start
 = note: exec-node internal-save-without-progress failed to start
 = note: exec-node load failed to instantiate operator
 = note: could not instantiate loader
 = note: pipeline failed to start